2002-11-12  Werner Koch  <wk@gnupg.org>

	* config.sub, config.guess: Updated from ftp.gnu.org/gnu/config
	to version 2002-11-08.

2002-05-14  Werner Koch  <wk@gnupg.org>

	* autogen.sh: Require vesion 2.53 of autoconf

2001-12-18  Werner Koch  <wk@gnupg.org>

	* distfiles: Remove files which are automatically added by automake.

2001-08-06  Werner Koch  <wk@gnupg.org>

	* autogen.sh: Added --build-w32 option.

2001-05-28  Werner Koch  <wk@gnupg.org>

	* db2html.in: Removed.
	* db2any: New.  Taken from GPH

Mon Jul 17 16:35:47 CEST 2000  Werner Koch  <wk@>

        * config.gues, config.sub: Support for s390-ibm-linux-gnu; thanks
        to Holger Smolinski.  Add support for QNX; by Sam Roberts.

Tue Oct 26 14:10:21 CEST 1999  Werner Koch  <wk@gnupg.de>

	* commit: Remove leading and trailing empty lines when copying
	Changes to Changelog

Wed Sep 15 16:22:17 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* gnupg.spec: Add Portuguese description

Thu Sep  2 16:40:55 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* mkdiff: changed format of diff file name and made script more
	general.

Wed Aug  4 10:34:18 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* config.guess: Updated from gnu/common and applied my emx patch again.
	* config.sub: Updated from gnu/common.

Wed Jul 14 19:42:08 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* ltmain.sh, ltconfig.sh : Updated to libtool 1.3.3

Mon Jul 12 14:55:34 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* autogen.sh: Run libtoolize

Sat May 22 22:47:26 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* autogen.sh: Fixed the error message for a missing libtool.

Sat May  8 19:28:08 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* mkinstalldirs, install-sh: New from GNU repository
	* config.sub, config.guess: Merged with rep version.

Sun Mar 14 19:34:36 CET 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* autogen.sh: Add a check for libtool because some autoconf macros
	are needed.
